--- a/spring-boot-mongodb/pom.xml
+++ b/spring-boot-mongodb/pom.xml
@@ -41,6 +41,7 @@
 		<dependency>
 		   <groupId>org.springframework.boot</groupId>
 		   <artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>1.5.3.RELEASE</version>
 		</dependency>
     </dependencies>
 	
