--- a/spring-boot-rabbitmq/src/main/resources/application.properties
+++ b/spring-boot-rabbitmq/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spirng-boot-rabbitmq-example
-
+server.port=8888
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -10,4 +10,7 @@ spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 #¿ªÆôACK
 spring.rabbitmq.listener.acknowledge-mode=manual
+
+enable.swagger=true
+base.package.swagger=com.neo.controller
 
