--- a/spring-boot-rabbitmq/pom.xml
+++ b/spring-boot-rabbitmq/pom.xml
@@ -46,7 +46,22 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-spring-web</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+    </dependencies>
 	
 	<build>
 		<plugins>
