--- a/spring-boot-rabbitmq/pom.xml
+++ b/spring-boot-rabbitmq/pom.xml
@@ -21,6 +21,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<fastjson.version>1.2.31</fastjson.version>
+		<nicetuan-basic-tool.version>1.0-SNAPSHOT</nicetuan-basic-tool.version>
 	</properties>
 
 	<dependencies>
@@ -56,12 +58,32 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.nicetuan.basic</groupId>
+			<artifactId>nicetuan-basic-tool-rabbitmq</artifactId>
+			<version>${nicetuan-basic-tool.version}</version>
+		</dependency>
+
+	</dependencies>
 	
 	<build>
 		<plugins>
